# Lepotilnica

./: .env  .env.example  .gitignore  README.md  drizzle.config.ts  next.config.ts  package-lock.json  package.json  sqlite.db  tailwind.config.ts
drizzle/: 0000_eager_the_captain.sql  0001_add_no_shows.sql  0002_fluffy_silvermane.sql  0003_add_customer_notes.sql
drizzle/meta/: 0000_snapshot.json  0002_snapshot.json  _journal.json
src/: middleware.ts
src/app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts
src/app/admin/: layout.tsx  page.tsx
src/app/admin/login/: page.tsx
src/app/admin/logs/: page.tsx
src/app/admin/services/: page.tsx
src/app/api/admin/analytics/: route.ts
src/app/api/admin/blocked-times/: route.ts
src/app/api/admin/bookings/: route.ts
src/app/api/admin/categories/: route.ts
src/app/api/availability/: route.ts
src/app/api/bookings/: route.ts
src/app/api/services/: route.ts
src/app/book/: layout.tsx  loading.tsx  page.tsx
src/app/cancel/: layout.tsx
src/app/cancel/[token]/: page.tsx
src/app/services/: loading.tsx  page.tsx
src/components/: BookingCalendar.tsx  Footer.tsx  Hero.tsx  HomeContent.tsx  Navbar.tsx  PageTransition.tsx  ScrollToTop.tsx  ServicesHero.tsx  ServicesList.tsx  Toast.tsx  WeeklyTimetable.tsx
src/db/: index.ts  migrate-cancellation-token.ts  migrate-customer-notes.ts  schema.ts
src/lib/: broadcast.ts  email.ts  rate-limit.ts  schedule.ts  useWebSocket.ts  validators.ts
ws-server/: Cargo.toml  Dockerfile  README.md  fly.toml
ws-server/src/: main.rs
(+11 files in other folders)
